--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<html> <head>
+<html> 
+  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Home Page by Inty</title>
   </head>
@@ -13,3 +14,16 @@
       <td>The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.</td>
       <td>The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.</td>
     </tr>
+    <tr>
+      <td>The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.</td>
+      <td>The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.</td>
+    </tr>
+     <tr>
+       <td colspan="2">The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.</td>
+       <td>The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.</td>
+     </tr>
+     <tr>
+       <td colspan="3">The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.The Quick Brown Fox Jumps Over The Lazy Dog Near The Bank Of The River.</td>
+     </tr>
+   </table>
+</html>
